@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-6.0.7,v 1.1.2.60 2016/04/15 19:38:51 snj Exp $
+# $NetBSD: CHANGES-6.0.7,v 1.1.2.61 2016/04/15 20:19:00 mrg Exp $
 
 A complete list of changes from the NetBSD 6.0.6 release to the NetBSD 6.0.7
 release:
@@ -7791,3 +7791,7 @@ libexec/httpd/tilde-luzah-bozo.c                up to 1.14
 	o -C option supports now CGI scripts only
 	[mrg, ticket #1377]
 
+libexec/httpd/cgi-bozo.c                        1.34
+
+	Fix the build: use %zu instead of %lu for size_t.
+	[mrg, ticket #1377]
